hphp/hack/test/typecheck/naming_fail_foreach.php.exp
File "naming_fail_foreach.php", line 7, characters 8-9:
The variable $z is defined (Naming[2007])
File "naming_fail_foreach.php", line 5, characters 5-6:
But in a different scope
